--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -12,12 +12,9 @@ on:
     types: [created]
 
 jobs:
-  config:
+  build:
     if: contains(github.event.issue.html_url, '/pull/') && startsWith(github.event.comment.body, '/ok-to-test')
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      e2e_ref: ${{ steps.set-matrix.outputs.e2e_ref }}
     steps:
       - uses: actions/checkout@v1
 
@@ -41,12 +38,12 @@ jobs:
         env:
           GCR_SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.CI_GCR_SERVICE_ACCOUNT_JSON_KEY }}
         run: |
-          echo "install gcloud cli"
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt-get -qq update
-          sudo apt-get install -y google-cloud-sdk
-          echo
+          # echo "install gcloud cli"
+          # echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          # curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          # sudo apt-get -qq update
+          # sudo apt-get install -y google-cloud-sdk
+          # echo
           echo "configure gcloud auth"
           echo "$GCR_SERVICE_ACCOUNT_JSON_KEY" > "$HOME"/gcr.json
           gcloud auth activate-service-account --key-file=$HOME/gcr.json
@@ -72,6 +69,13 @@ jobs:
           git reset --hard $PR_HEAD_SHA
           make push
 
+  config:
+    runs-on: ubuntu-latest
+    needs: build
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      e2e_ref: ${{ steps.set-matrix.outputs.e2e_ref }}
+    steps:
       - id: set-matrix
         name: Generate test matrix
         run: |
@@ -98,14 +102,14 @@ jobs:
           matrix=()
           for x in ${k8s[@]}; do
               for y in ${db[@]}; do
-                  matrix+=( $( jq -n -c --arg x "$x" --arg y "$y" '{"k8s":$x,"db":$y}' ) )
+                  matrix+=( $( jq -n -c --arg x "$x" --arg y "$y" '{"k8s":$x,"db":"mongodb","version":$y}' ) )
               done
           done
 
           # https://stackoverflow.com/a/63046305/244009
           function join { local IFS="$1"; shift; echo "$*"; }
           matrix=$(echo "{"include":[$(join , ${matrix[@]})]}")
-          echo "$matrix"
+          echo $matrix
           echo "::set-output name=matrix::$matrix"
           echo "::set-output name=e2e_ref::$e2e_ref"
 
@@ -223,4 +227,4 @@ jobs:
           echo -n "$TEST_CREDENTIALS" > hack/config/.env
           echo >> hack/config/.env
           echo "GOOGLE_SERVICE_ACCOUNT_JSON_KEY=$(echo $GOOGLE_SERVICE_ACCOUNT_JSON_KEY)" >> hack/config/.env
-          make e2e-tests GINKGO_ARGS="--flakeAttempts=2" TEST_ARGS="--db-type mongodb --db-version=${{ matrix.db }} --test-profiles community" || (kubectl describe deployment -n kube-system kubedb-mg-operator; kubectl logs -n kube-system deployment/mg-operator; kubectl describe deployment -n kube-system stash-operator; kubectl logs -n kube-system deployment/stash-operator operator; exit 1;)
+          make e2e-tests GINKGO_ARGS="--flakeAttempts=2" TEST_ARGS="--db-type=${{ matrix.db }} --db-version=${{ matrix.version }} --test-profiles community" || (kubectl describe deployment -n kube-system kubedb; kubectl logs -n kube-system deployment/kubedb; kubectl describe deployment -n kube-system stash-operator; kubectl logs -n kube-system deployment/stash-operator operator; exit 1;)
